--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,12 +21,19 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
-- task: VSBuild@1
+- task: DotNetCoreCLI@2
+  displayName: 'api -Build using dot net core cli'
   inputs:
-    solution: '$(solution)'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)"'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+      command: build
+      arguments: '--configuration $(buildConfiguration)'
+      projects: '**/api.csproj'
+
+- task: DotNetCoreCLI@2
+  displayName: 'web - Build using dot net core cli'
+  inputs:
+      command: build
+      arguments: '--configuration $(buildConfiguration)'
+      projects: '**/web.csproj'
 
 - task: VSTest@2
   inputs:
