--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,7 +60,7 @@ steps:
     containerRegistry: 'Azure Container Registery'
     repository: 'acr-api'
     command: 'buildAndPush'
-    Dockerfile: '**/Dockerfile'
+    Dockerfile: '**/DockerFile'
 
 - task: DotNetCoreCLI@2
   displayName: Publish Windows Artifact
