Added Build number as version

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,6 +61,7 @@ steps:
     repository: 'acr-api'
     command: 'buildAndPush'
     Dockerfile: '**/DockerFile'
+    tags: '$(Build.BuildNumber)'
 
 - task: DotNetCoreCLI@2
   displayName: Publish Windows Artifact
