--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,6 +62,13 @@ steps:
     command: 'buildAndPush'
     Dockerfile: '**/DockerFile'
     tags: '$(Build.BuildNumber)'
+- task: Docker@2
+  inputs:
+    containerRegistry: 'Azure Container Registery'
+    repository: 'acr-api'
+    command: 'buildAndPush'
+    Dockerfile: '**/DockerFile'
+    tags: '$(Build.BuildNumber)'
 
 - task: DotNetCoreCLI@2
   displayName: Publish Windows Artifact
