added force option to powershell

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -104,9 +104,9 @@ stages:
                       Inline: |
                         New-AzResourceGroup -Name $(WindowsResourceGroup) -Location eastus -force
                         
-                        $AppServicePlan = New-AzAppServicePlan -Name Windows -Location eastus -Tier Basic -NumberofWorkers 1 -WorkerSize Small -ResourceGroupName $(WindowsResourceGroup) -force
+                        $AppServicePlan = New-AzAppServicePlan -Name Windows -Location eastus -Tier Basic -NumberofWorkers 1 -WorkerSize Small -ResourceGroupName $(WindowsResourceGroup)
                         
-                        New-AzWebApp -ResourceGroupName $(WindowsResourceGroup) -Name $(WindowsWebAppName) -Location eastus -AppServicePlan $AppServicePlan.Name -force
+                        New-AzWebApp -ResourceGroupName $(WindowsResourceGroup) -Name $(WindowsWebAppName) -Location eastus -AppServicePlan $AppServicePlan.Name
                       azurePowerShellVersion: 'LatestVersion'
                   - task: AzurePowerShell@5
                     displayName: 'Create Linux Resources'
@@ -118,7 +118,7 @@ stages:
                         
                         $AppServicePlan = New-AzResource -ResourceGroupName $(LinuxResourceGroup) -Location eastus -ResourceType microsoft.web/serverfarms -ResourceName Linux -kind linux -Properties @{reserved="true"} -Sku @{name="B1";tier="Basic"; size="B1"; family="B"; capacity="1"} -Force -OutVariable AppServicePlan
                         
-                        New-AzWebApp -ResourceGroupName $(LinuxResourceGroup) -Name $(LinuxWebAppName) -Location eastus -AppServicePlan $AppServicePlan.Name -force
+                        New-AzWebApp -ResourceGroupName $(LinuxResourceGroup) -Name $(LinuxWebAppName) -Location eastus -AppServicePlan $AppServicePlan.Name
                       azurePowerShellVersion: 'LatestVersion'
 
                  deploy:
