--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -106,7 +106,10 @@ stages:
                         
                         $AppServicePlan = New-AzAppServicePlan -Name Windows -Location eastus -Tier Basic -NumberofWorkers 1 -WorkerSize Small -ResourceGroupName $(WindowsResourceGroup)
                         
-                        New-AzWebApp -ResourceGroupName $(WindowsResourceGroup) -Name $(WindowsWebAppName) -Location eastus -AppServicePlan $AppServicePlan.Name
+                        $WebApp = Get-AzWebApp -ResourceGroupName $(WindowsResourceGroup) -Name $(WindowsWebAppName) -ErrorAction SilentlyContinue
+
+                        if($WebApp){Set-AzWebApp -ResourceGroupName $(WindowsResourceGroup) -Name $(WindowsWebAppName) -AppServicePlan $AppServicePlan.Name}
+                        else{New-AzWebApp -ResourceGroupName $(WindowsResourceGroup) -Name $(WindowsWebAppName) -Location eastus -AppServicePlan $AppServicePlan.Name}
                       azurePowerShellVersion: 'LatestVersion'
                   - task: AzurePowerShell@5
                     displayName: 'Create Linux Resources'
@@ -118,7 +121,10 @@ stages:
                         
                         $AppServicePlan = New-AzResource -ResourceGroupName $(LinuxResourceGroup) -Location eastus -ResourceType microsoft.web/serverfarms -ResourceName Linux -kind linux -Properties @{reserved="true"} -Sku @{name="B1";tier="Basic"; size="B1"; family="B"; capacity="1"} -Force -OutVariable AppServicePlan
                         
-                        New-AzWebApp -ResourceGroupName $(LinuxResourceGroup) -Name $(LinuxWebAppName) -Location eastus -AppServicePlan $AppServicePlan.Name
+                        $WebApp = Get-AzWebApp -ResourceGroupName $(LinuxResourceGroup) -Name $(LinuxWebAppName) -ErrorAction SilentlyContinue
+
+                        if($WebApp){Set-AzWebApp -ResourceGroupName $(LinuxResourceGroup) -Name $(LinuxWebAppName) -AppServicePlan $AppServicePlan.Name}
+                        else{New-AzWebApp -ResourceGroupName $(LinuxResourceGroup) -Name $(LinuxWebAppName) -Location eastus -AppServicePlan $AppServicePlan.Name}
                       azurePowerShellVersion: 'LatestVersion'
 
                  deploy:
@@ -151,9 +157,11 @@ stages:
                              - script: echo Notify! This is on success
                      failure:
                          steps:
-                             - script: echo Restore from backup! This is on failure
-                    
-                          
-
-
-                  
+                            - task: AzurePowerShell@5
+                              inputs:
+                                azureSubscription: 'Azure'
+                                ScriptType: 'InlineScript'
+                                Inline: |
+                                    Remove-AzResourceGroup -Name $(WindowsResourceGroup) -Force
+                                    Remove-AzResourceGroup -Name $(LinuxResourceGroup) -Force
+                                azurePowerShellVersion: 'LatestVersion'
